@@ -319,6 +319,7 @@ src/plugins/BoltzmannDistribution.cpp -text
 src/plugins/ClassicalRotor.cpp -text
 src/plugins/EckartCoefficients.cpp -text
 src/plugins/ExponentialDown.cpp -text
+src/plugins/HinderedRotorCM1D.cpp -text
 src/plugins/LandauZenerCrossingCoeff.cpp -text
 src/plugins/MesmerILT.cpp -text
 src/plugins/QMRotor.cpp -text
